# Designing-a-Minesweeper-Game-

./: CMakeLists.txt  README.md  main.cpp
include/: Board.h  Cell.h  Game.h
logger/: Logger.cpp  Logger.h
src/: Board.cpp  Cell.cpp  Game.cpp
tests/: TestGame.cpp
